--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,16 +1,20 @@
 options:
   logging: CLOUD_LOGGING_ONLY
 steps:
-  # Step 1: Install dependencies
   - name: "python:3.9"
     id: "Install dependencies"
     entrypoint: "bash"
     args:
       - "-c"
       - |
+        echo "Installing dependencies..."
+        pip install --upgrade pip
         pip install -r requirements.txt
+        if [ $? -ne 0 ]; then
+          echo "Dependency installation failed"
+          exit 1
+        fi
 
-  # Step 2: Execute the Python script
   - name: "python:3.9"
     id: "Create GCP Compute Disk"
     entrypoint: "python"
